Add Help section and related resources
- Added configuration for `HelpViewModel` and `HelpPage` in `PageService.cs`.
- Introduced help-related resources in both English and Japanese in `Resources.resw`, including messages for data reception failures and mobile app information.
- Added navigation item for Help section in `ShellPage.xaml` with an associated icon.
- Created `HelpViewModel` class inheriting from `ObservableRecipient` in `HelpViewModel.cs`.
- Defined layout for Help page in `HelpPage.xaml`, including UI elements for displaying data reception errors and mobile app information.
- Implemented `HelpPage` class in `HelpPage.xaml.cs` with initialization of UI components in the constructor.

--- a/TouchSenderTablet.GUI/Views/ShellPage.xaml
+++ b/TouchSenderTablet.GUI/Views/ShellPage.xaml
@@ -53,6 +53,11 @@
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xEBFC;" />
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
+                <NavigationViewItem x:Uid="Shell_Help" helpers:NavigationHelper.NavigateTo="TouchSenderTablet.GUI.ViewModels.HelpViewModel">
+                    <NavigationViewItem.Icon>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE897;" />
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
             </NavigationView.MenuItems>
             <NavigationView.HeaderTemplate>
                 <DataTemplate>
